# Soul-Knight-Clone

./: .gitignore  CMakeLists.txt  SoulKnight_Structure.txt  changeBackGround.py  cutVideoframe.py  drawTree.py  flip.py  handleTiled.py  handleTransferGate.py  mergePicture.py  resize.py  slipIntoAddRooms.py  structure_building.py  test.cpp
map_xml/: 1.1.xml  2.1.xml  3.1.xml
resources/object/transfer_gate/: resize.py
src/: main.cpp
src/core/: animation.cpp  animation.h  application.cpp  application.h  game.cpp  game.h  gameState.cpp  gameState.h  map.cpp  map.h  menuState.cpp  menuState.h  pauseState.cpp  pauseState.h  playState.cpp  playState.h  selectionState.cpp  selectionState.h  state.h  stateManager.cpp  stateManager.h
src/entities/: gameObject.cpp  gameObject.h  invinsibleObject.cpp  invinsibleObject.h
src/entities/collectable/: bigCompositePotion.cpp  bigCompositePotion.h  bigHealingPotion.cpp  bigHealingPotion.h  bigMpPotion.cpp  bigMpPotion.h  collectable.cpp  collectable.h  compositePotion.cpp  mpPotion.cpp  (+6 more)
src/manager/: UIManager.cpp  UIManager.h  animationManager.cpp  animationManager.h  camera.cpp  camera.h  keyboardManager.cpp  keyboardManager.h  objectManager.cpp  objectManager.h  soundManager.cpp  soundManager.h  stageManager.cpp  stageManager.h
src/map/: map.cpp  map.h
src/pool/: dropPool.cpp  dropPool.h  monsterPool.cpp  monsterPool.h  projectilePool.cpp  projectilePool.h
src/utils/: hitBox.cpp  hitBox.h  interactiveText.h  point.cpp  point.h  random.cpp  random.h  tag.h  vec.cpp  vec.h  wallet.cpp  wallet.h
structures/: output.puml
(+108 files in other folders)
